--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -9,9 +9,11 @@
     <%= product.description %>
   </p>
   <footer class="actions">
+   <% if product.quantity != 0 %>
     <%= button_to add_item_cart_path(product_id: product.id), class: 'btn btn-primary' , method: :post do %>
       <%= fa_icon "shopping-cart", text: 'Add' %>
     <% end %>
+   <% end %>
     <%= link_to product, class: 'btn btn-default pull-right' do %>
       Details &raquo;
     <% end %>
@@ -20,4 +22,10 @@
   <aside class="price">
     <%= humanized_money_with_symbol product.price %>
   </aside>
+
+  <% if product.quantity == 0 %>
+  <aside class="soldout">
+    SOLD OUT
+  </aside>
+  <% end %>
 </article>
