Fix font color on the sold out badge

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -60,6 +60,7 @@ main section.categories-show {
         border-top-left-radius: 4px;
         border-bottom-right-radius: 20px;
         font-size: 0.8em;
+        color: #EEE;
       }
 
       &:hover {
