Update erb file to show Product and Category count

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,21 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<div class="order-summary jumbotron">
+    <h3>Admin Dashboard</h3>
+<div class="panel panel-default items">
+ <table class="table table-bordered">
+      <thead>
+        <tr>
+          <th>Products count</th>
+          <th>Categories count</th>
+        </tr>
+      </thead>
+      <tbody>
+        <td>
+    <%= @categories %>
+  </td>
+   <td>
+    <%= @products %>
+  </td>
+      </tbody>
+    </table>
+    </div>
+</div>
