--- a/app/views/layouts/sam_top_nav.html.erb
+++ b/app/views/layouts/sam_top_nav.html.erb
@@ -14,9 +14,6 @@
         <li>
           <%= link_to 'Home', :root %>
         </li>
-          <li>
-          <%= link_to 'About Us', :about_index %>
-        </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             Categories
@@ -28,35 +25,32 @@
             <% end %>
           </ul>
         </li>
-        <% if @current_user %>
-        <li class="login">
-         Signed in as <%= current_user.name %>
-        </li>
         <li>
-        <%= link_to "Logout", '/logout' %>
+          <%= link_to 'About', :about_index %>
         </li>
-        <% else %>
-         <li>
-          <%= link_to 'Register', :signup %>
-        </li>
-         <li>
-          <%= link_to 'Login', :login %>
-        </li>
-        <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
 
+          <% if @current_user %>
+
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span class="text-danger"><%= fa_icon 'lock', text: 'Admin' %></span>
             <span class="caret"></span>
           </a>
+
           <ul class="dropdown-menu">
             <li><%= link_to 'Dashboard', [:admin, :root] %></li>
             <li><%= link_to 'Products',  [:admin, :products] %></li>
-            <li><%= link_to 'Categories',  [:admin, :categories] %></li>
+            <li><%= link_to 'Categories', [:admin, :categories] %></li>
           </ul>
         </li>
+
+        <% else %>
+
+          <div id="navbar" class="navbar-collapse collapse"><%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %><div>
+
+        <% end %>
         <li>
           <%= link_to cart_path do %>
             <%= fa_icon "shopping-cart" %> My Cart (<%= cart.size %>)
