--- a/app/views/admin/sales/index.html.erb
+++ b/app/views/admin/sales/index.html.erb
@@ -1,29 +1,30 @@
-<section class="admin-products-index">
+<section class="admin-Sales-index">
 
   <header class="page-header">
-    <h1>Admin &raquo; All Products</h1>
+    <h1>Admin &raquo; All Sales</h1>
   </header>
 
   <div class="well">
-    <%= link_to '+ New Product', [:new, :admin, :product], class: 'btn btn-info' %>
+    <%= link_to '+ New Sale', [:new, :admin, :sale], class: 'btn btn-info' %>
   </div>
 
-  <div class="panel panel-default products">
+  <div class="panel panel-default sales">
 
     <table class="table table-bordered">
       <thead>
         <tr>
-          <th colspan="2">Product</th>
-          <th>Category</th>
-          <th>Price</th>
-          <th>Qty Remaining</th>
+          <th>Name</th>
+          <th>Start Date</th>
+          <th>End Date</th>
+          <th>Status</th>
+          <th>Percent Off</th>
           <th></th>
         </tr>
       </thead>
       <tbody>
-        <%= render @products %>
+        <%= render @Sales %>
       </tbody>
-    </table>
+   ]</table>
 
   </div>
 
