Add new_admin_sale route

--- a/app/views/admin/sales/index.html.erb
+++ b/app/views/admin/sales/index.html.erb
@@ -22,7 +22,7 @@
         </tr>
       </thead>
       <tbody>
-        <%= render @Sales %>
+        <%#= render @Sales %>
       </tbody>
    ]</table>
 
