Update admin/sales view and add sale model

--- a/app/views/admin/sales/index.html.erb
+++ b/app/views/admin/sales/index.html.erb
@@ -22,9 +22,9 @@
         </tr>
       </thead>
       <tbody>
-        <%#= render @Sales %>
+        <%= render @sales %>
       </tbody>
-   ]</table>
+   </table>
 
   </div>
 
