Add alert on the application template to show on sale messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
   <%= render 'layouts/top_nav' %>
 
   <main class="container">
+
+  <p class="alert alert-info">
+    There's an active sale <%= "Back to school" %> sale going on!
+    Everthing is <%= 15 %>% off!
+  </p>
+
     <%= yield %>
   </main>
 
