--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -47,7 +47,7 @@
        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span class="caret"></span>
-            <span class="text-danger"><%= fa_icon 'lock', text: current_user.name %></span>
+            <span class="text-danger"><%= fa_icon 'lock', text: current_user.first_name %></span>
             <!--<span class="text-danger"><%#= fa_icon 'lock', text: 'Admin' %></span> -->
           <%# end %>
           </a>
